--- a/src/index.css
+++ b/src/index.css
@@ -30,9 +30,6 @@ html[data-theme="dark"] {
   --color-btn-primary: white;
 }
 
-body {
-  background: var(--color-accent);
-}
 
 page-title {
   background-image: url('../public/bg.png');
